added new elements to library

--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
 
     <body>
         <!--Headings-->
+        <div>
         <h1>Hello World!!</h1>
         <h2>Hello World!!</h2>
         <h3>Hello World!!</h3>
         <h4>Hello World!!</h4>
         <h5>Hello World!!</h5>
         <h6>Hello World!!</h6>
+        </div>
 
         <!--Paragraph -->
+        <div>
         <p>
             This is a paragraph block in HTML.  <strong>This is a bold paragraph with an inline tag.</strong>
         </p>
@@ -24,5 +27,75 @@
             This is a paragraph block in HTML.  <em>This is an emphasised paragraph with an inline tag.</em>
             <a href="http://drmcninja.com/" target="_blank">click here!!</a>
         </p>
+        </div>
+        <!--Lists-->
+
+        <div>
+        <ul>
+            <li>ipod</li>
+            <li>ipad</li>
+            <li>mac</li>
+            <li>iphone</li>
+        </ul>
+        </div>
+        <br/>
+
+        <hr/>
+
+        <div>
+        <ol>
+            <li>First</li>
+            <li>Second</li>
+            <li>Third</li>
+            <li>Fourth</li>
+        </ol>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Email</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>Josh</td>
+                    <td>33</td>
+                    <td>josh.bern@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>25</td>
+                    <td>john.bern@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>Julie</td>
+                    <td>29</td>
+                    <td>julie.bern@gmail.com</td>
+                </tr>
+            </tbody>
+        </table>
+        </div>
+
+        <form action="" method="">
+            <div>
+                <label>First name</label>
+                <input type="text" name="firstname" placeholder="please type your name">
+            </div>
+        <br/>
+            <div>
+                <label>Last name</label>
+                <input type="text" name="lastname">
+            </div>
+        <br/>
+            <div>
+                <label>Email</label>
+                <input type="text" name="email">
+            </div>
+
+        </form>
+
     </body>
 </html>
